--- a/index.html
+++ b/index.html
@@ -70,5 +70,13 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">radwan sghir</a>.
+      </p>
+    </footer>
   </body>
 </html>
